# distil

./: .coveragerc  .gitignore  .gitreview  .testr.conf  HACKING.rst  INVOICES.md  Makefile  README.md  README.mw  README.rst  Vagrantfile  client.mk  groups  is_provisioned.py  new-requirements.txt  old-requirements.txt  project.config  puppet_generate.py  requirements.txt  run_tests.sh  setup.cfg  setup.py  sources.list  test-requirements.txt  tox.ini
api/: artifice_api.py  helpers.py  keystone_api.py  requirements.txt  web.py
api-ref/source/: conf.py  index.rst  parameters.yaml  products.inc
api/tests/: test_api.py  test_keystone.py
artifice/: artifact.py  artifice.py  auth.py  clerk_mixins.py  config.py  constants.py  csv_mixin.py  database.py  helpers.py  interface.py  invoice.py  rates.py  sales_order.py  transformers.py  why_is_this_called_artifice.py
artifice/api/: helpers.py  web.py
artifice/billing/: README  csv_invoice.py  openerp.py
artifice/models/: __init__.py  billing.py  db_models.py  resources.py  tenants.py  transformers.py  usage.py
artifice/plugins/: csv_.py  csv_exporter.py
client/: client.py  exc.py  shell.py
debian/: .gitignore  changelog  control  pydist-overrides  python-distil.install  python-distilclient.install  rules
devstack/: bootstrap.sh  localrc
distil/: NoPickle.py  auth.py  config.py  constants.py  context.py  database.py  exceptions.py  helpers.py  i18n.py  initdb.py  interface.py  rates.py  transformers.py  version.py
distil/api/: __init__.py  acl.py  app.py  auth.py  helpers.py  v2.py  web.py
distil/cli/: distil_api.py
distil/cmd/: distil_api.py  distil_collector.py
distil/collector/: base.py  ceilometer.py
distil/common/: __init__.py  api.py  cache.py  (+5 more)
etc/: collector.yaml  conf.yaml  distil.conf.sample  meter_mappings.yml  meter_mappings.yml.sample  policy.json.sample  products.json  transformer.yaml  transformer.yaml.sample
examples/: conf.yaml  csv_rates.csv  real_rates.csv  test_rates.csv
odoo/: .gitignore  README  glue.ini.example  odoo-glue.py  odoo-products-snapshot.py  requirements.txt
puppet/: Modulefile
scripts/: initdb.py
tests/: __init__.py  constants.py  data_samples.py  helpers.py  mock_exporter.py  test_DB_transform.py  test_api.py  test_billable.py  test_csv.py  test_csv_exporter.py  test_csv_invoice.py  test_database_module.py  test_import.py  test_instancing_objects.py  test_interface.py  test_invoice.py  test_models.py  test_transformers.py
tools/: install_venv.py
vagrant/: bootstrap.sh
(+301 files in other folders)
