[metadata]
name = distil
version = 2014.1
summary = Distil project
description-file = README.md
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/distil/

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    distil

data_files =
    share/distil = etc/distil/*

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
