[metadata]
name = distil
summary = Distil project
description-file = README.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/distil/

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    distil

data_files =
    share/distil = etc/distil/*

[entry_points]
console_scripts =
    distil-api = distil.cmd.distil_api:main
    distil-collector = distil.cmd.distil_collector:main
    distil-db-manage = distil.db.migration.cli:main

oslo.config.opts =
    distil.config = distil.config:list_opts

distil.collector =
    ceilometer = distil.collector.ceilometer:CeilometerCollector

distil.transformer =
    max = distil.transformer.arithmetic:MaxTransformer
    storagemax = distil.transformer.arithmetic:StorageMaxTransformer
    sum = distil.transformer.arithmetic:SumTransformer
    uptime = distil.transformer.conversion:UpTimeTransformer
    fromimage = distil.transformer.conversion:FromImageTransformer
    networkservice = distil.transformer.conversion:NetworkServiceTransformer

distil.erp =
    odoo = distil.erp.drivers.odoo:OdooDriver
    jsonfile = distil.erp.drivers.jsonfile:JsonFileDriver

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
